scss/main.scss
// === SCSS FOR PORTFOLIO WEBSITE === 
// color scheme
$primary-color: #222;
$secondary-color: #fff;
$accent-color: #B63F55;

*{
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
/* width */
::-webkit-scrollbar {
    width: 20px;
}
/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    // border-radius: 10px;
}
/* Handle */
::-webkit-scrollbar-thumb {
    background: $primary-color;
    // border-radius: 10px;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #444;
}
body {
    width: 100%;
    font-family: 'Nunito', sans-serif;
}
// cool affect
canvas{
    background-color: $secondary-color;
    z-index: -1;
    position: fixed;
}
// header 
header {
    z-index: 1;
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 15rem; 

    // flex header
    .header-flex {
        display: flex;
        flex-direction: column;
        align-items: center;

        // header text
        .header-text {
            text-align: center;
            color: $primary-color;

            // titles
            .header-title {
                font-size: 4rem;
                padding: 10px;
                
                // name 
                .header-color {
                    color: $accent-color;
                }
            }
            .header-sub-title {
                font-size: 5rem;
            }
        }

        // social medias
        .social-medias {
            font-size: 5rem;
            color: $primary-color;
            transition: all 0.3s;

            // social icons
            .fab {
                cursor: pointer;
                transition: all 0.3s;
            }
            .fab:hover {
                color: $accent-color;
            }
        }
    }
}
.color {
    color: $accent-color;
}
.typed-cursor {
    font-size: 4rem;
}
.header-title-flex {
    display: flex;
    flex-direction: row;
}
// begin section
.begin {
    color: $primary-color;
    width: 100%;
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;

    // see what I do.
    .arrow-text {
        font-size: 2rem;
        transition: all 0.3s;
    }
    // arrow
    .arrow {
        color: $primary-color;
        transition: all 0.3s;

        .fas {
            font-size: 4rem;
            cursor: pointer;
        }
    }
    .arrow:hover {
        color: $accent-color;
    }
}
// main nav 
nav {
    width: 100%;
    height: 100px;
    background-color: $accent-color;
    display: flex;
    align-items: center;

    // ul items to menu
    .menu-flex {
        display: flex;
        justify-content: start;
        margin-left: 10rem;

        a {
            text-decoration: none;
            color: $secondary-color;
        }
        a:hover {
            color: #333;
        }
        .menu-item {
            font-size: 1.2rem;
            margin: 1.2rem;
            cursor: pointer;
            transition: all 0.3s;
        }
        .menu-item:hover {
            color: #333;
        }
        .active {
            color: #222;
            border-bottom: 5px solid $primary-color;
            transition: all 0.3s;
        }
    }
    // flags
    .flags {
        width: 60px;
        height: 40px;
        cursor: pointer;
        border: 3px solid $secondary-color;
        border-radius: 10px;
        margin: 5px;
        margin-left: 20px;
    }
}
// stick nav & animatation
#stickThis {
    margin-top: 0;
    position: fixed;
    top: 0;
    z-index: 9999;
    display: none;
    transition: all 0.3s;
}
// section headers
.section-header {
    font-size: 4rem;
    text-align: center;
    transition: all 0.3s;
    padding-top: 120px;
    text-transform: uppercase;

    hr {
        width: 300px;
        border-width: 3.5px;
        border-color: $primary-color;
        border-radius: 10px;
    }
}
// icons & info
.icons-flex {
    display: flex;
    flex-direction: row;
    width: 90%;
    margin: 0 auto;
    
    @media screen and (max-width: 1200px) {
        flex-wrap: wrap;
        width: 70%;
    }
    @media screen and (max-width: 600px) {
        width: 90%;
    }
}
.icons {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-top: 20px;

    #fix-rocket {
        padding: 30px 35px;
    }
    span {
        font-size: 3rem;
        padding: 30px 40px;
        background-color: $primary-color;
        border-radius: 100%;
        color: $secondary-color;
        border: 5px solid $accent-color;
    }
    h1 {
        font-size: 2.5rem;
        padding: 20px;
    }
    p {
        font-size: 1.5rem;
        padding: 10px 25px;
        color: #333;
    }
}
.about-intro {
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    flex-direction: row;
    width: 100%;
    margin-top: 30px;

    @media screen and (max-width: 1400px) {
        flex-direction: column;
    }
}
.about-me {
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    box-align: center;
    box-pack: center;
    width: 35%;

    @media screen and (max-width: 1400px) {
        width: 80%;
        margin-bottom: 20px;
    }

    div {
        display: flex;
        flex-direction: column;
        align-items: center;
        align-content: center;
        box-align: center;
        box-pack: center;

        img {
            border: 10px solid $primary-color;
            width: 250px;
            height: 250px;
            border-radius: 100%;
            // padding: 5px;
            margin: 10px;
        }
        p {
            font-size: 1.5rem;
            padding: 1rem;
            text-indent: 2rem;

            @media screen and (max-width: 1400px) {
                width: 80%;
            }

            span {
                color: $accent-color;
            }
        }
    }
}
.about-skills {
    width: 45%;
    display: flex;
    flex-direction: column;
    align-content: center;

    @media screen and (max-width: 1400px) {
        width: 80%;
    }
}
.skills-text{
    display: flex;
    flex-direction: row;
    width: 280px;
    align-items: center;
    justify-content: flex-end;
    border-right: 2px solid lightgray;

    h1 {
        font-size: 1.3rem;
        padding: 5px;
        margin-right: 5px;
    }
    i {
        font-size: 2.5rem;
        padding: 5px;
        color: $accent-color;
        margin-right: 10px;
    }
    img {
        width: 50px;
        margin-right: 10px;
    }
}
.progress {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 5px;
}
.my-progress {
    width: 100%;
    background-color: #ddd;
    border-radius: 10px;
    margin-left: 15px;
    padding: 5px;
}
.bar {
    height: 30px;
    background-color: $accent-color;
    text-align: center; /* To center it horizontally (if you want) */
    line-height: 30px; /* To center it vertically */
    color: $secondary-color;
    border-radius: 10px;
    width: 10%;
}
// menu button SASS from https://codepen.io/anon/pen/wZjbMG
$menu-color: #222;
$snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);

.menu-container {
  cursor: pointer;
  .bars {
    width: 60px;
    height: 20px;
    position: absolute;
    top: 45px;
    left: 90%;
    transition: transform 0.3s $snappy;
    // border: 1px solid white;
    span {
      display: block;
      width: 100%;
      height: 10px;
      background-color: $menu-color;
      margin-top: 10px;
      &:first-child {
        margin-top: 0;
        transform: scaleX(1);
        transition: transform 0.2s $snappy;
        transition-delay: 0.4s;
      }
      &:nth-child(3) {
        width: 65%;
        transition: width 0.2s $snappy;
        transition-delay: 0.4s;
      }
    }
    .other-bar {
      width: 10px;
      height: 0;
      background-color: $menu-color;
      position: absolute;
      top: -7px;
      left: 50%;
      margin-left: -5px;
      transition: height 0.4s $snappy;
      z-index: 10;
    }
  }
  &.is-menu-open {
    .bars {
      transform: rotate(45deg);
      transition-delay: 0.4s;
      span {
        &:first-child {
          transform: scaleX(0);
          transition: transform 0.2s $snappy;
        }
        &:nth-child(3) {
          width: 0;
          transition: width 0.2s $snappy;
        }
      }
      .other-bar {
        height: 63px;
        transition: height 0.2s $snappy;
        transition-delay: 0.3s;
      }
    }
  }
}
// end of menu button

